<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/price_hour"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextAvailability"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:autofillHints=""
            android:hint="@string/availability"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTimeWindow"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/time_window_picker"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="textMultiLine" />

        <Switch
            android:id="@+id/switchActive"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:text="@string/active"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/buttonCreateListing"
            android:text="@string/create_listing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/buttonCancel"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>