<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/mapPreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Address: 123 Main St"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="Price/hour: $5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textAvailability"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/availability_6pm_9pm"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:text="@string/description_covered_driveway_near_downtown"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonReserve"
            android:text="@string/reserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonGoBack"
            android:text="@string/go_back_to_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</ScrollView>